deploy/k8s/overlays/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ledger
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: GKE_STATIC_IP_NAME
    networking.gke.io/managed-certificates: payment-ledger-certificate-v2
    networking.gke.io/v1beta1.FrontendConfig: payment-ledger-frontend
spec:
  rules:
    - host: GKE_HOSTNAME
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
